force-app/main/default/objects/Consent_Capture_Utility__mdt/Consent_Capture_Utility__mdt.object-meta.xml
<CustomObject>
    <description>This is a general set of utilities and settings to manage the consent capture app exchange solution</description>
    <label>Consent Capture Utility</label>
    <pluralLabel>Consent Capture Utilities</pluralLabel>
</CustomObject>