force-app/main/default/objects/Consent_Capture_Utility__mdt/fields/Contact_Point_Consent_Type_Value__c.field-meta.xml
<CustomField>
    <fullName>Contact_Point_Consent_Type_Value__c</fullName>
    <description
  >The corresponding picklist value for the contact point consent type</description>
    <inlineHelpText>Email, Phone, Web...</inlineHelpText>
    <label>Contact Point Consent Type Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>