force-app/main/default/objects/Consent_Capture_Utility__mdt/fields/Output_Value__c.field-meta.xml
<CustomField>
    <fullName>Output_Value__c</fullName>
    <description
  >The output value of the setting, ie the description of the consent type.</description>
    <inlineHelpText>The description of the consent type</inlineHelpText>
    <label>Output Value</label>
    <type>TextArea</type>
</CustomField>