force-app/main/default/objects/Consent_Capture_Utility__mdt/fields/Setting_Type__c.field-meta.xml
<CustomField>
    <fullName>Setting_Type__c</fullName>
    <description>The type of setting that you are going to be updating</description>
    <inlineHelpText>Set this as &#39;description&#39;</inlineHelpText>
    <label>Setting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>